manifests/ingress/yaobank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaobank-ingress
  namespace: yaobank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer
                port:
                  number: 80
